Upgraded Collections.emptySMTH() to SMTH.of()