@@ -9,8 +9,8 @@ import static org.assertj.core.api.Assertions.fail;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
 import java.util.concurrent.BlockingQueue;
@@ -744,7 +744,7 @@ class ChannelTest {
         try (Connection conn = new MockConnectionFactory().newConnection()) {
             try (Channel channel = conn.createChannel()) {
 
-                channel.queueDeclare("existingQueue", false, false, false, Collections.emptyMap()).getQueue();
+                channel.queueDeclare("existingQueue", false, false, false, Map.of()).getQueue();
                 AtomicInteger replyCodeHolder = new AtomicInteger(-1);
                 ReturnListener returnListener = (replyCode, replyText, exchange, routingKey1, properties, body) -> replyCodeHolder.set(replyCode);
                 channel.addReturnListener(returnListener);
@@ -764,7 +764,7 @@ class ChannelTest {
         try (Connection conn = new MockConnectionFactory().newConnection()) {
             try (Channel channel = conn.createChannel()) {
                 channel.exchangeDeclare("test", "direct");
-                channel.queueDeclare("existingQueue", false, false, false, Collections.emptyMap()).getQueue();
+                channel.queueDeclare("existingQueue", false, false, false, Map.of()).getQueue();
                 channel.queueBind("existingQueue", "test", "boundRoutingKey");
                 AtomicInteger replyCodeHolder = new AtomicInteger(-1);
                 ReturnCallback returnListener = r -> replyCodeHolder.set(r.getReplyCode());
